# crawler-for-quotes.net

./: .gitignore  README.md  batch_crawler.sh  claude3-7-quotes-etl.py  main.py  pyproject.toml  run_crawler.py
crawler/: __init__.py  items.py  pipelines.py  run.py  scrapy.cfg  settings.py
crawler/results/: movies-A.list  movies-Q.json  movies-UV.json  movies-X.json  movies-Y.json  movies-Z.json
crawler/spiders/: __init__.py  movie_quotes_spider.py
ddl/: create_schema.sql  instruction.md  quotes_sample.csv
