[tool.poetry]
name = "quotescraper"
version = "0.1.0"
description = "The project is a web scraper that extracts movie quotes from quotes.net using Scrapy and provides an API using FastAPI."
authors = ["0xMichaelRan <michaelran16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
scrapy = "^2.12.0"
python-multipart = "^0.0.20"
httpx = "^0.28.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
